aggiunta risorse e prenotazioni

--- a/htmlstatico/pages/index.html
+++ b/htmlstatico/pages/index.html
@@ -292,10 +292,13 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
+                            <a href="risorse.html"><i class="fa fa-list fa-fw"></i> Risorse</a>
+                        </li>
+                        <li>
                             <a href="prenotazioni.html"><i class="fa fa-table fa-fw"></i> Prenotazioni</a>
                         </li>
                         <li>
-                            <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Aggiungi Risorsa </a>
+                            <a href="aggiungi-risorsa.html"><i class="fa fa-table fa-fw"></i> Aggiungi Risorsa</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
