--- a/htmlstatico/pages/risorse.html
+++ b/htmlstatico/pages/risorse.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Prenotazioni-Amministratore</title>
+    <title>Risorse-Amministratore</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -301,7 +301,7 @@
                             <a href="prenotazioni.html"><i class="fa fa-table fa-fw"></i> Prenotazioni</a>
                         </li>
                         <li>
-                            <a href="aggiungi-risorsa.html"><i class="fa fa-edit fa-fw"></i> Aggiungi risorsa</a>
+                            <a href="aggiungi-risorsa.html"><i class="fa fa-edit fa-fw"></i> Aggiungi Risorsa</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
@@ -337,7 +337,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Prenotazioni</h1>
+                    <h1 class="page-header">Risorse</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -346,41 +346,43 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Prenotazioni
+                            Risorse
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
+                            <div>
+                                
+                                <span><a href="aggiungi-risorsa.html"><button type="button"class="btn btn-default btn-circle"><i class="fa fa-plus"></i></button></a></span>
+                                <span>Aggiungi risorsa</span>
+                            </div>
+                            
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                                 <thead>
                                     <tr>
                                         <th>Risorsa</th>
                                         <th>Nome</th>
-                                        <th>Utente</th>
-                                        <th>Inizio</th>
-                                        <th>Fine</th>
+                                        <th>Limite</th>
+                                        <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr class="odd gradeX">
                                         <td align="center">Macchina</td>
                                         <td align="center">Toyota Yaris</td>
-                                        <td align="center">Andrea Bonandin</td>
-                                        <td align="center">25-12-2018 09:00</td>
-                                        <td align="center">25-12-2018 11:00</td>
+                                        <td align="center">5</td>
+                                        <td align="center"><button type="button" class="btn btn-default btn-circle" ><i class="fa fa-pencil"></i></button><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
                                     </tr>
                                     <tr class="gradeC">
                                         <td align="center">Portatile</td>
                                         <td align="center">Lenovo k5</td>
-                                        <td align="center">Federica Amato</td>
-                                        <td align="center">25-12-2018 09:00</td>
-                                        <td align="center">25-12-2018 11:00</td>
+                                        <td align="center">1</td>
+                                        <td align="center"><button type="button" class="btn btn-default btn-circle" ><i class="fa fa-pencil"></i></button><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
                                     </tr>
                                     <tr class="gradeU">
                                         <td align="center">Aula</td>
                                         <td align="center">A5</td>
-                                        <td align="center">Davide Limardi</td>
-                                        <td align="center">25-12-2018 09:00</td>
-                                        <td align="center">25-12-2018 11:00</td>
+                                        <td align="center">5</td>
+                                        <td align="center"><button type="button" class="btn btn-default btn-circle" ><i class="fa fa-pencil"></i></button><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
                                     </tr>
                                 </tbody>
                             </table>
