HTML amministratore completato

--- a/htmlstatico/pages/risorse.html
+++ b/htmlstatico/pages/risorse.html
@@ -370,19 +370,19 @@
                                         <td align="center">Macchina</td>
                                         <td align="center">Toyota Yaris</td>
                                         <td align="center">5</td>
-                                        <td align="center"><button type="button" class="btn btn-default btn-circle" ><i class="fa fa-pencil"></i></button><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
+                                        <td align="center"><a href="modifica-risorsa.html"><button type="button" class="btn btn-default btn-circle" ><i class="fa fa-pencil"></i></button></a><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
                                     </tr>
                                     <tr class="gradeC">
                                         <td align="center">Portatile</td>
                                         <td align="center">Lenovo k5</td>
                                         <td align="center">1</td>
-                                        <td align="center"><button type="button" class="btn btn-default btn-circle" ><i class="fa fa-pencil"></i></button><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
+                                        <td align="center"><a href="modifica-risorsa.html"><button type="button" class="btn btn-default btn-circle" ><i class="fa fa-pencil"></i></button></a><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
                                     </tr>
                                     <tr class="gradeU">
                                         <td align="center">Aula</td>
                                         <td align="center">A5</td>
                                         <td align="center">5</td>
-                                        <td align="center"><button type="button" class="btn btn-default btn-circle" ><i class="fa fa-pencil"></i></button><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
+                                        <td align="center"><a href="modifica-risorsa.html"><button type="button" class="btn btn-default btn-circle" ><i class="fa fa-pencil"></i></button></a><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
                                     </tr>
                                 </tbody>
                             </table>
