--- a/htmlstatico/pages/aggiungi-risorsa.html
+++ b/htmlstatico/pages/aggiungi-risorsa.html
@@ -362,7 +362,7 @@
                                             <label>Limite Risorsa</label>
                                             <input class="form-control" placeholder="Inserisci numero">
                                         </div>
-                                        <button type="submit" class="btn btn-default">Aggiungi</button>
+                                        <button type="submit" class="btn btn-primary">Aggiungi</button>
                                         <button type="reset" class="btn btn-default">Annulla</button>
                                     </form>
                                 </div>
