--- a/htmlstatico/pages/indexUtente.html
+++ b/htmlstatico/pages/indexUtente.html
@@ -117,10 +117,19 @@
                             <a href="indexUtente.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a href="cercaDisponibilita.html"><i class="fa fa-list fa-fw"></i> Cerca disponibilità</a>
+                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="flot.html">Flot Charts</a>
+                                </li>
+                                <li>
+                                    <a href="morris.html">Morris.js Charts</a>
+                                </li>
+                            </ul>
+                            <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="aggiungiPrenotazione.html"><i class="fa fa-table fa-fw"></i> Aggiungi prenotazione</a>
+                            <a href="cercaDisponibilita.html"><i class="fa fa-list fa-fw"></i> Cerca disponibilità</a>
                         </li>
                         <li>
                             <a href="prenotazioniInAtto.html"><i class="fa fa-edit fa-fw"></i> Prenotazioni correnti</a>
