--- a/htmlstatico/pages/cercaDisponibilita.html
+++ b/htmlstatico/pages/cercaDisponibilita.html
@@ -234,7 +234,7 @@
                                         <div class="form-group">
                                             <label>Tipo Risorsa</label>
                                             <select class="form-control" required>
-                                                <option disabled selected value>seleziona tipo risorsa</option>
+                                                <option disabled selected value>Seleziona tipo risorsa</option>
                                                 <option>Aula</option>
                                                 <option>Macchina</option>
                                                 <option>Portatile</option>
