--- a/htmlstatico/pages/aggiungi-risorsa.html
+++ b/htmlstatico/pages/aggiungi-risorsa.html
@@ -345,10 +345,11 @@
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <form role="form">
+                                    <form role="form" action="risorse.html">
                                         <div class="form-group">
-                                            <label>Seleziona tipo Risorsa</label>
-                                            <select class="form-control">
+                                            <label>Tipo Risorsa</label>
+                                            <select class="form-control" required>
+                                                <option disabled selected value>Seleziona tipo risorsa</option>
                                                 <option>Aula</option>
                                                 <option>Macchina</option>
                                                 <option>Portatile</option>
@@ -356,11 +357,11 @@
                                         </div>
                                         <div class="form-group">
                                             <label>Nome Risorsa</label>
-                                            <input class="form-control" placeholder="Inserisci testo">
+                                            <input class="form-control" placeholder="Inserisci testo" required>
                                         </div>
                                         <div class="form-group">
                                             <label>Limite Risorsa</label>
-                                            <input class="form-control" placeholder="Inserisci numero">
+                                            <input class="form-control" placeholder="Inserisci numero" type="number" required>
                                         </div>
                                         <button type="submit" class="btn btn-primary">Aggiungi</button>
                                         <button type="reset" class="btn btn-default">Annulla</button>
