--- a/htmlstatico/pages/cercaDisponibilita.html
+++ b/htmlstatico/pages/cercaDisponibilita.html
@@ -124,13 +124,13 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="cercaDisponibilita.html"><i class="fa fa-table fa-fw"></i> Cerca Disponibilità</a>
+                            <a href="cercaDisponibilita.html"><i class="fa fa-search-plus fa-fw"></i> Cerca Disponibilità</a>
                         </li>
                         <li>
-                            <a href="prenotazioniInAtto.html"><i class="fa fa-edit fa-fw"></i> Prenotazioni correnti</a>
+                            <a href="prenotazioniInAtto.html"><i class="fa fa-history fa-fw"></i> Prenotazioni correnti</a>
                         </li>
                         <li>
-                            <a href="cronologiaPrenotazioni.html"><i class="fa fa-edit fa-fw"></i> Cronologia prenotazioni</a>
+                            <a href="cronologiaPrenotazioni.html"><i class="fa fa-th-list fa-fw"></i> Cronologia prenotazioni</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
