--- a/htmlstatico/pages/indexUtente.html
+++ b/htmlstatico/pages/indexUtente.html
@@ -129,13 +129,13 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="cercaDisponibilita.html"><i class="fa fa-list fa-fw"></i> Cerca disponibilità</a>
+                            <a href="cercaDisponibilita.html"><i class="fa fa-search-plus fa-fw"></i> Cerca disponibilità</a>
                         </li>
                         <li>
-                            <a href="prenotazioniInAtto.html"><i class="fa fa-edit fa-fw"></i> Prenotazioni correnti</a>
+                            <a href="prenotazioniInAtto.html"><i class="fa fa-history fa-fw"></i> Prenotazioni correnti</a>
                         </li>
                         <li>
-                            <a href="cronologiaPrenotazioni.html"><i class="fa fa-edit fa-fw"></i> Cronologia prenotazioni</a>
+                            <a href="cronologiaPrenotazioni.html"><i class="fa fa-th-list fa-fw"></i> Cronologia prenotazioni</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
@@ -182,7 +182,7 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-tasks fa-5x"></i>
+                                    <i class="fa fa-history fa-5x"></i>
                                 </div>
                                 <div class="col-xs-6 text-right">
                                     <div class="huge">Prenotazioni correnti!</div>
@@ -203,7 +203,7 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-shopping-cart fa-5x"></i>
+                                    <i class="fa fa-th-list fa-5x"></i>
                                 </div>
                                 <div class="col-xs-6 text-right">
                                     <div class="huge">Cronologia prenotazioni!</div>
