--- a/htmlstatico/pages/prenotazioniInAtto.html
+++ b/htmlstatico/pages/prenotazioniInAtto.html
@@ -115,7 +115,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="indexUtente.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
@@ -130,13 +130,13 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="cercaDisponibilita.html"><i class="fa fa-list fa-fw"></i> Cerca disponibilità</a>
+                            <a href="cercaDisponibilita.html"><i class="fa fa-search-plus fa-fw"></i> Cerca disponibilità</a>
                         </li>
                         <li>
-                            <a href="prenotazioniInAtto.html"><i class="fa fa-table fa-fw"></i> Prenotazioni correnti</a>
+                            <a href="prenotazioniInAtto.html"><i class="fa fa-history fa-fw"></i> Prenotazioni correnti</a>
                         </li>
                         <li>
-                            <a href="cronologiaPrenotazioni.html"><i class="fa fa-edit fa-fw"></i> Cronologia prenotazioni</a>
+                            <a href="cronologiaPrenotazioni.html"><i class="fa fa-th-list fa-fw"></i> Cronologia prenotazioni</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
