Aggiunta nome prenotazione in HTML

--- a/htmlstatico/pages/prenotazioni.html
+++ b/htmlstatico/pages/prenotazioni.html
@@ -356,6 +356,7 @@
                                         <th>Risorsa</th>
                                         <th>Nome</th>
                                         <th>Utente</th>
+                                        <th>Nome Prenotazione</th>
                                         <th>Inizio</th>
                                         <th>Fine</th>
                                     </tr>
@@ -365,6 +366,7 @@
                                         <td align="center">Macchina</td>
                                         <td align="center">Toyota Yaris</td>
                                         <td align="center">Andrea Bonandin</td>
+                                        <td align="center">Pippo</td>
                                         <td align="center">25-12-2018 09:00</td>
                                         <td align="center">25-12-2018 11:00</td>
                                     </tr>
@@ -372,6 +374,7 @@
                                         <td align="center">Portatile</td>
                                         <td align="center">Lenovo k5</td>
                                         <td align="center">Federica Amato</td>
+                                        <td align="center">Pluto</td>
                                         <td align="center">25-12-2018 09:00</td>
                                         <td align="center">25-12-2018 11:00</td>
                                     </tr>
@@ -379,6 +382,7 @@
                                         <td align="center">Aula</td>
                                         <td align="center">A5</td>
                                         <td align="center">Davide Limardi</td>
+                                        <td align="center">Topolino</td>
                                         <td align="center">25-12-2018 09:00</td>
                                         <td align="center">25-12-2018 11:00</td>
                                     </tr>
