--- a/htmlstatico/pages/cercaDisponibilita.html
+++ b/htmlstatico/pages/cercaDisponibilita.html
@@ -230,7 +230,6 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <form role="form">
-                                        <fieldset disabled>
                                         <div class="form-group">
                                             <label>Tipo Risorsa</label>
                                             <select class="form-control" required>
@@ -241,26 +240,21 @@
                                             </select>
                                         </div>
                                         <div class="form-group">
-                                            <label>Periodo</label>
-                                            <input class="form-control" placeholder="Inserisci numero ore" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Data inizio ricerca</label>
+                                            <label>Data inizio</label>
                                             <input class="form-control" type="datetime-local" required>
                                         </div>
                                          <div class="form-group">
-                                            <label>Data fine ricerca</label>
-                                            <input class="form-control" type="datetime-local">
+                                            <label>Data fine</label>
+                                            <input class="form-control" type="datetime-local" required>
                                         </div>
                                         <div class="form-group">
                                             <label>Nome Risorsa</label>
-                                            <input class="form-control" placeholder="Inserisci nome risorsa">
+                                            <input class="form-control" placeholder="Inserisci nome risorsa" required>
                                         </div>
                                         <div class="form-group">
-                                            <label>Limite</label>
-                                            <input class="form-control" placeholder="Inserisci limite" type="number">
+                                            <label>Nome prenotazione</label>
+                                            <input class="form-control" placeholder="Inserisci limite" required>
                                         </div>
-                                        </fieldset>
                                         <button type="submit" class="btn btn-primary">Prenota</button>
                                         <button type="reset" class="btn btn-default">Reset</button>
                                     </form>
