--- a/htmlstatico/pages/cronologiaPrenotazioni.html
+++ b/htmlstatico/pages/cronologiaPrenotazioni.html
@@ -189,7 +189,8 @@
                                 <thead>
                                     <tr>
                                         <th>Risorsa</th>
-                                        <th>Nome</th>
+                                        <th>Nome Risorsa</th>
+                                        <th>Nome Prenotazione</th>
                                         <th>Inizio</th>
                                         <th>Fine</th>
                                     </tr>
@@ -198,18 +199,21 @@
                                     <tr class="odd gradeX">
                                         <td align="center">Macchina</td>
                                         <td align="center">Toyota Yaris</td>
+                                        <td align="center">Pippo</td>
                                         <td align="center">25-12-2018 09:00</td>
                                         <td align="center">25-12-2018 11:00</td>
                                     </tr>
                                     <tr class="gradeC">
                                         <td align="center">Portatile</td>
                                         <td align="center">Lenovo k5</td>
+                                        <td align="center">Pluto</td>
                                         <td align="center">25-12-2018 09:00</td>
                                         <td align="center">25-12-2018 11:00</td>
                                     </tr>
                                     <tr class="gradeU">
                                         <td align="center">Aula</td>
                                         <td align="center">A5</td>
+                                        <td align="center">Topolino</td>
                                         <td align="center">25-12-2018 09:00</td>
                                         <td align="center">25-12-2018 11:00</td>
                                     </tr>
