--- a/htmlstatico/pages/prenotazioniInAtto.html
+++ b/htmlstatico/pages/prenotazioniInAtto.html
@@ -195,7 +195,8 @@
                                 <thead>
                                     <tr>
                                         <th>Risorsa</th>
-                                        <th>Nome</th>
+                                        <th>Nome Risorsa</th>
+                                        <th>Nome Prenotazione</th>
                                         <th>Inizio</th>
                                         <th>Fine</th>
                                         <th></th>
@@ -205,6 +206,7 @@
                                     <tr class="odd gradeX">
                                         <td align="center">Macchina</td>
                                         <td align="center">Toyota Yaris</td>
+                                        <td align="center">Pippo</td>
                                         <td align="center">29-11-2021 09:00</td>
                                         <td align="center">29-11-2021 09:00</td>
                                         <td align="center"><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
@@ -212,6 +214,7 @@
                                     <tr class="gradeC">
                                         <td align="center">Portatile</td>
                                         <td align="center">Lenovo k5</td>
+                                        <td align="center">Pluto</td>
                                         <td align="center">11-11-2011 10:00</td>
                                         <td align="center">12-11-2011 10:00</td>   
                                         <td align="center"><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
@@ -219,6 +222,7 @@
                                     <tr class="gradeU">
                                         <td align="center">Aula</td>
                                         <td align="center">A5</td>
+                                        <td align="center">Topolino</td>
                                         <td align="center">05-12-2018 10:00</td>
                                         <td align="center">05-12-2018 12:00</td>
                                         <td align="center"><button type="button" class="btn btn-default btn-circle"><i class="fa fa-trash-o"></i></button></td>
