Aggiunta lista persone

--- a/htmlstatico/pages/prenotazioni.html
+++ b/htmlstatico/pages/prenotazioni.html
@@ -304,6 +304,9 @@
                             <a href="aggiungi-risorsa.html"><i class="fa fa-edit fa-fw"></i> Aggiungi risorsa</a>
                         </li>
                         <li>
+                            <a href="utenti.html"><i class="fa fa-users fa-fw"></i> Utenti</a>
+                        </li>
+                        <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
