--- a/htmlstatico/pages/utenti.html
+++ b/htmlstatico/pages/utenti.html
@@ -9,13 +9,19 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modifica risorsa-Amministratore</title>
+    <title>Utenti-Amministratore</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
     <link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+
+    <!-- DataTables CSS -->
+    <link href="../vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
+
+    <!-- DataTables Responsive CSS -->
+    <link href="../vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
@@ -172,7 +178,7 @@
                         <li class="divider"></li>
                         <li>
                             <a class="text-center" href="#">
-                                <strong>Vedi tutte le risorse</strong>
+                                <strong>Vedi tutti le prenotazioni</strong>
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         </li>
@@ -288,14 +294,14 @@
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
-                                                <li>
+                        <li>
                             <a href="risorse.html"><i class="fa fa-list fa-fw"></i> Risorse</a>
                         </li>
                         <li>
                             <a href="prenotazioni.html"><i class="fa fa-table fa-fw"></i> Prenotazioni</a>
                         </li>
                         <li>
-                            <a href="aggiungi-risorsa.html"><i class="fa fa-edit fa-fw"></i> Aggiungi Risorsa</a>
+                            <a href="aggiungi-risorsa.html"><i class="fa fa-edit fa-fw"></i> Aggiungi risorsa</a>
                         </li>
                         <li>
                             <a href="utenti.html"><i class="fa fa-users fa-fw"></i> Utenti</a>
@@ -334,7 +340,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Modifica Risorsa</h1>
+                    <h1 class="page-header">Utenti registrati</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -343,37 +349,49 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Form
+                            Utenti
                         </div>
+                        <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <div class="row">
-                                <!-- /.col-lg-6 (nested) -->
-                                <div class="col-lg-6">
-                                    <h1>Modifica</h1>
-                                    <form role="form" action="risorse.html">
-                                        <fieldset disabled>
-                                            <div class="form-group">
-                                                <label for="disabledSelect">Tipo Risorsa</label>
-                                                <select id="disabledSelect" class="form-control">
-                                                    <option>Macchina</option>
-                                                </select>
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="disabledSelect">Nome Risorsa</label>
-                                                <input class="form-control" id="disabledInput" type="text" placeholder="Toyota Yaris" disabled>
-                                            </div>
-                                        </fieldset>
-                                        <div class="form-group">
-                                            <label>Limite Risorsa</label>
-                                            <input class="form-control" placeholder="Inserisci numero" type="number" required>
-                                        </div>                                       
-                                        <button type="submit" class="btn btn-primary">Modifica</button>
-                                        <button type="reset" class="btn btn-default">Annulla</button>
-                                    </form>
-                                </div>
-                                <!-- /.col-lg-6 (nested) -->
-                            </div>
-                            <!-- /.row (nested) -->
+                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                <thead>
+                                    <tr>
+                                        <th>Nome</th>
+                                        <th>Cognome</th>
+                                        <th>Email</th>
+                                        <th>Username</th>
+                                        <th>Password</th>
+                                        <th>Loggato</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr class="odd gradeX">
+                                        <td align="center">Andrea</td>
+                                        <td align="center">Bonandin</td>
+                                        <td align="center">ciao@gmail.com</td>
+                                        <td align="center">pippo</td>
+                                        <td align="center">123</td>
+                                        <td align="center">SI</td>
+                                    </tr>
+                                    <tr class="gradeC">
+                                        <td align="center">Federica</td>
+                                        <td align="center">Amato</td>
+                                        <td align="center">riciao@gmail.com</td>
+                                        <td align="center">pluto</td>
+                                        <td align="center">456</td>
+                                        <td align="center">NO</td>
+                                    </tr>
+                                    <tr class="gradeU">
+                                        <td align="center">Davide</td>
+                                        <td align="center">Limardi</td>
+                                        <td align="center">ririciao@gmail.com</td>
+                                        <td align="center">topolino</td>
+                                        <td align="center">789</td>
+                                        <td align="center">SI</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <!-- /.table-responsive -->
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -397,8 +415,22 @@
     <!-- Metis Menu Plugin JavaScript -->
     <script src="../vendor/metisMenu/metisMenu.min.js"></script>
 
+    <!-- DataTables JavaScript -->
+    <script src="../vendor/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="../vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
+    <script src="../vendor/datatables-responsive/dataTables.responsive.js"></script>
+
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
+
+    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
+    <script>
+    $(document).ready(function() {
+        $('#dataTables-example').DataTable({
+            responsive: true
+        });
+    });
+    </script>
 
 </body>
 
